<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Poink</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="activate">Activate</string>
    <string name="middlecircle">Middle circle</string>
    <string name="endcircle">End Circle</string>
    <string name="tilting">Tilting</string>
    <string name="wakeup">Wake up!</string>
    <string name="holdupright">Hold Upright</string>
    <string name="clicktostart">Click to start</string>
    <string name="itsallgood">It\'s all good</string>
    <string name="poinkactivated">Poink Activated</string>
    <string name="poinkactivatedbackagain">Poink Activated back again</string>
    <string name="poinkpaused">Poink Paused</string>
    <string name="poinkstopped">Poink Stopped</string>
    <string name="angletostartalerts">Phone tilt angle at which the Wakeup alert should begin</string>
    <string name="vibratefor">During the wakeup alert, vibrate the phone for _ seconds before starting the ringing sound</string>
    <string name="helpus">Like Poink? Tell your friends</string>
    <string name="angle45">45 degrees</string>
    <string name="angle75">75 degrees</string>
    <string name="vibrate5">5 secs</string>
    <string name="vibrate10">10 secs</string>
    <string name="share">Share</string>
    <string name="settings">SETTINGS</string>
    
    <string name="demopage1content">Whenever you open Poink, you\'ll see this green screen.The centre circle is used to start/stop Poink&#8230;</string>
    <string name="demopage2content">Once Poink is switched on, it starts running in the background&#8230;</string>
    <string name="demopage3content">You can continue with other things, but keep holding the phone upright&#8230;</string>
    <string name="demopage4content">When you start falling asleep, the phone in your hand tilts.\nPoink senses this and starts alerting you till you hold the phone upright again.</string>
    <string name="demopage5content">Thats it! You are ready to use Poink now.\n\nMake sure to use Poink in a stable environment where no harm can occur to the phone or any person.</string>
    <string name="demogotit">Got it.</string>
    <string name="shareemailtext">I just found a useful app that helps me stay awake, whenever Iam trying to avoid falling asleep.\n\nIt\'s called Poink.</string>
    <string name="shareviatext">Share via</string>
    
    <string name="exitwhenon">Poink is currently activated and will continue checking the phone tilt even after you\'ve moved out of the app. 
        						\n\nYou can return to Poink at any time if you need to switch it off.
        						</string>
    <string name="okgotit">OK, Got it</string>
    <string name="No">No</string>
    <string name="poinkisrunning">Poink is ON</string>
    <string name="keepupright">Keep holding the phone upright</string>
    <string name="demoimagecontentdescription">Demo Image</string>
    <string name="replaydemo">Replay tutorial</string>
    <string name="demowillbeplayednexttime">The tutorial will be played next time the Poink app is opened</string>
    <string name="paused">Paused</string>
    
    <integer name="tiltAngleDefault">45</integer>
    <integer name="vibrateSecondsDefault">10</integer>
</resources>
