<?xml version="1.0" encoding="utf-8"?>
<!-- <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/frag2_background"
    android:orientation="vertical" >
    
 <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="main" />

 <Button
     android:id="@+id/button1main"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:onClick="buttonClicked"
     android:text="Button" />

</LinearLayout>
 -->
 
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    
    android:onClick="layoutClicked"
     >

     <ImageView android:id="@+id/imgv_logo"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="7dp"
       android:layout_alignParentLeft="true"
       android:src="@drawable/ic_withinapp_icon"
       android:layout_marginLeft="5dp"
       />
     
   <ImageView
       android:id="@+id/imgv_settings"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentRight="true"
       android:layout_marginRight="10dp"
       
       android:onClick="buttonClicked"
       android:paddingLeft="15dp"
       android:paddingRight="15dp"
       android:src="@drawable/settings_image" />
     
      <ImageView
		android:id="@+id/imgv_middlecircle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="true"
		android:contentDescription="@string/middlecircle"
		android:scaleType="fitCenter"
		android:src="@drawable/middlecircle" />
      
        <ImageView
		android:id="@+id/imgv_maincircle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="true"
		android:contentDescription="@string/activate"
		
		android:scaleType="fitCenter"
		android:src="@drawable/maincircle" />
        
         <ImageView
            android:id="@+id/imgv_hiddencircle"
            android:contentDescription="@string/endcircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
			android:layout_centerVertical="true"
			android:src="@drawable/hidden_circle"
			android:gravity="center"
             />
        
          <TextView
            android:id="@+id/tv_outercircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
			android:layout_centerVertical="true"
			android:onClick="buttonClicked"
			android:background="@drawable/outercircle"
			android:gravity="center"
			android:clickable="true"
			
             />

        <TextView
            android:id="@+id/tv_textdisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
			android:layout_above="@+id/tv_timedisplay"
			android:textSize="35sp"
			
            />

        <TextView
            android:id="@+id/tv_timedisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
			android:textColor="@android:color/white"
			android:layout_alignParentBottom="true"
			
			android:textSize="15sp"
            />
        
</RelativeLayout>
 